footer spacing fix

--- a/index.css
+++ b/index.css
@@ -65,8 +65,10 @@ from{
     color: darkslategrey;
 }
 .footer{
-    top: 100%;
-    padding: 20%;
+    display:flex;
+    flex-direction: row;
+    margin: 150px 0px 0px 20px;
+    justify-content: space-between;
     color: darkslategray;
   
 }
